# RealWorld

./: .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
RealWorld/constants/: CMakeLists.txt  biomes.glsl  bodies.hpp  chunk.hpp  generation.glsl  generation.hpp  light.glsl  light.hpp  tile.glsl  tile.hpp  tree.glsl  tree.hpp
RealWorld/constants/tile_properties/: CMakeLists.txt  blockTransformationProperties.hpp  blockTransformationRules.hpp  fluidProperties.glsl  wallTransformationProperties.hpp  wallTransformationRules.hpp
RealWorld/world/: BodySimulator.cpp  BodySimulator.hpp  CMakeLists.txt  Chunk.cpp  Chunk.hpp  ChunkGenerator.cpp  ChunkGenerator.hpp  ChunkHandler.cpp  ChunkHandler.hpp  ChunkLoader.cpp  ChunkLoader.hpp  ChunkManager.cpp  ChunkManager.hpp  DestroyTicket.hpp  DynamicLight.hpp  Light.hpp  LightManipulator.cpp  LightManipulator.hpp  MinimapDrawer.cpp  MinimapDrawer.hpp  ParticleSimulator.cpp  ShadowDrawer.cpp  ShadowDrawer.hpp  StaticLight.hpp  TDB.cpp  TDB.hpp  TileDrawer.cpp  TileDrawer.hpp  TreeSimulator.cpp  TreeSimulator.hpp  TreesPoC.cpp  TreesPoC.hpp  World.cpp  World.hpp  WorldCreator.cpp  WorldCreator.hpp  WorldData.hpp  WorldDataLoader.cpp  WorldDataLoader.hpp  WorldDrawer.cpp  (+4 more)
RealWorld/world/chunk/: Chunk.cpp  Chunk.hpp  ChunkGenerator.cpp  ChunkGenerator.hpp  ChunkLoader.cpp  ChunkManager.cpp  ChunkManager.hpp
RealWorld/world/physics/: CMakeLists.txt  DynamicHitbox.cpp  DynamicHitbox.hpp  Health.hpp  Hitbox.cpp  Hitbox.hpp  Player.cpp  Player.hpp  PlayerData.hpp  position_conversions.hpp
RealWorld/world/shaders/: ActiveChunksSB.glsl  ActiveChunksSSIB.glsl  BodiesSB.glsl  BranchesSB.glsl  CMakeLists.txt  RootsSB.glsl  TilePropertiesUB.glsl  TilePropertiesUIB.glsl  TreeDynamicsPC.glsl  WorldDynamicsPC.glsl  WorldDynamicsUIB.glsl  analyzeContinuity.comp  modifyTiles.comp  simulAndRasterizeTrees.frag  simulAndRasterizeTrees.tesc  simulAndRasterizeTrees.tese  simulAndRasterizeTrees.vert  simulateBodies.comp  simulateBranches.comp  simulateFluids.comp  simulateTrees.comp  simulationPL.comp  tileLoad.glsl  tileLoadStore.glsl  transformTiles.comp
RealWorld/world/shaders/tile_properties/: CMakeLists.txt  blockProperties.glsl  blockTransformationIndices.glsl  blockTransformationRules.glsl  fluidProperties.glsl  propertiesHelper.txt  wallProperties.glsl  wallTransformationIndices.glsl  wallTransformationRules.glsl
src/RealWorld/constants/: Body.glsl  Body.hpp  CMakeLists.txt  Chunk.glsl  Chunk.hpp  Generation.glsl  Generation.hpp  Item.hpp  Light.glsl  Light.hpp  ResourceIndex.hpp  Tile.glsl  Tile.hpp  Vegetation.glsl  World.glsl  World.hpp  biome.glsl  body.glsl  body.hpp  chunk.glsl  chunk.hpp  generation.glsl  generation.hpp  item.hpp  light.glsl  light.hpp  tile.glsl  tile.hpp  tree.glsl  tree.hpp  vegetation.glsl  vegetation.hpp  world.glsl  world.hpp
src/RealWorld/constants/tile_properties/: BlockTransformationProperties.hpp  BlockTransformationRules.hpp  CMakeLists.txt  FluidProperties.glsl  WallTransformationProperties.hpp  WallTransformationRules.hpp  blockPropertiesHelper.txt  blockTransformationProperties.hpp  blockTransformationRules.hpp  fluidProperties.glsl  wallPropertiesHelper.txt  wallTransformationProperties.hpp  wallTransformationRules.hpp
src/RealWorld/drawing/: CMakeLists.txt  DroppedTilesDrawer.cpp  DroppedTilesDrawer.hpp  ExternalLight.hpp  MinimapDrawer.cpp  MinimapDrawer.hpp  MinimapLayout.hpp  ShadowDrawer.cpp  ShadowDrawer.hpp  TileDrawer.cpp  TileDrawer.hpp  WorldDrawer.cpp  WorldDrawer.hpp  WorldDrawingPC.hpp
src/RealWorld/drawing/shaders/: AnalysisPC.glsl  CMakeLists.txt  DroppedTilesDrawingPC.glsl  DynamicLightsSB.glsl  ShadowDrawingPC.glsl  TileDrawerPC.glsl  WorldDrawingPC.glsl  addDynamicLights.comp  analyzeTiles.comp  calcInputsPll.glsl  calculateShadows.comp  drawColor.frag  drawDroppedTiles.frag  drawDroppedTiles.geom  drawDroppedTiles.vert  drawFullscreen.vert  drawMinimap.frag  drawMinimap.vert  drawShadows.frag  drawShadows.vert  drawTiles.frag  drawTiles.vert
src/RealWorld/main/: ActionCmdBuf.hpp  CMakeLists.txt  KeyBinder.hpp  MainMenuRoom.cpp  MainMenuRoom.hpp  RealWorld.cpp  RealWorld.hpp  Room.hpp  WorldRoom.Game.cpp  WorldRoom.cpp  WorldRoom.hpp  main.cpp
src/RealWorld/main/settings/: CMakeLists.txt  GameSettings.cpp  GameSettings.hpp  KeyBinder.hpp  combos.hpp
src/RealWorld/simulation/tiles/: ActiveChunksSB.hpp  CMakeLists.txt  Chunk.cpp  Chunk.hpp  ChunkActivationMgr.cpp  ChunkActivationMgr.hpp  ChunkTransferMgr.cpp  ChunkTransferMgr.hpp  ChunkTransferStage.hpp  World.cpp  World.hpp
src/RealWorld/simulation/vegetation/: BodySimulator.cpp  BodySimulator.hpp  BranchAllocRegSB.hpp  BranchAllocReqUB.hpp  BranchRange.hpp  BranchSB.hpp  BranchSerialized.hpp  CMakeLists.txt  VegSimulator.cpp  VegSimulator.hpp
src/RealWorld/vegetation/: BodySimulator.cpp  BodySimulator.hpp  Branch.hpp  BranchAllocRegSB.hpp  BranchAllocReqUB.hpp  BranchAllocRequestUB.hpp  BranchRange.hpp  BranchSB.hpp  CMakeLists.txt  ParticleSimulator.cpp  ParticleSimulator.hpp  VegSimulator.cpp  VegSimulator.hpp
src/RealWorld/vegetation/shaders/: BodiesSB.glsl  Branch.glsl  BranchAllocRegSB.glsl  BranchAllocReqUB.glsl  BranchAllocRequestUB.glsl  BranchRasterSB.glsl  BranchSB.glsl  BranchSBWithAllocation.glsl  BranchVectorSB.glsl  BranchesSB.glsl  CMakeLists.txt  VegDynamicsPC.glsl  VegSB.glsl  branchRasterizationPll.glsl  duplicateBranches.geom  normAngles.glsl  rasterizeBranches.frag  rasterizeBranches.vert  replicateBranches.geom  simulateBodies.comp  tessellateBranches.tesc  tessellateBranches.tese  (+3 more)
src/RealWorld/world/: ActivationManager.cpp  ActivationManager.hpp  ActiveChunksSB.hpp  CMakeLists.txt  Chunk.cpp  Chunk.hpp  ChunkActivationMgr.cpp  ChunkActivationMgr.hpp  ChunkManager.cpp  ChunkManager.hpp  ChunkTransferMgr.cpp  ChunkTransferMgr.hpp  ChunkTransferStage.hpp  Light.hpp  LightManipulator.cpp  LightManipulator.hpp  ShaderMessageBroker.cpp  ShaderMessageBroker.hpp  TDB.cpp  TDB.hpp  VegManager.cpp  VegManager.hpp  World.cpp  World.hpp  WorldDrawer.cpp  WorldDrawer.hpp
(+668 files in other folders)
